2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* Makefile.in: Increment CYGRELEASE to 2.

2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* lib/Makefile.in: Include GDIPLUS_HEADERS in dist target.

2011-03-11  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.17.
	* Makefile.in: Ditto.

2011-03-07  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/winbase.h (PSAPI_WORKING_SET_BLOCK,
	PSAPI_WORKING_SET_INFORMATION): Move from here...
	* include/psapi.h (PSAPI_WORKING_SET_BLOCK,
	PSAPI_WORKING_SET_INFORMATION): ... to here.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.16.
	* Makefile.in: Ditto.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (NMTCKEYDOWN): Define.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wtsapi32.h (WTSSendMessageA, WTSSendMessageW, WTSSendMessage):
	Define.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (PSAPI_WORKING_SET_BLOCK,
	PSAPI_WORKING_SET_INFORMATION): Define.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (__GNUC_EXTENSION): Define, replacing __MINGW_EXTENSION.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/kernel32.def (FreeLibraryAndExitThread): Fix definition.

2011-03-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (FILE_ENCRYPTABLE, FILE_IS_ENCRYPTED, FILE_READ_ONLY,
	FILE_ROOT_DIR, FILE_SYSTEM_ATTR, FILE_SYSTEM_DIR, FILE_SYSTEM_NOT_SUPPORT,
	FILE_UNKNOWN, FILE_USER_DISALLOWED): Define.

2011-03-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winioctl.h (_DRIVE_LAYOUT_INFORMATION_MBR): Add
	_DRIVE_LAYOUT_INFORMATION_MBR_DEFINED guard.
	* include/ddk/winddk.h (_DRIVE_LAYOUT_INFORMATION_MBR): Ditto.

2011-03-04  Seth Jackson  <sethj@users.sourceforge.net>

	* include/winnt.h (PAGE_WRITECOMBINE): Define.