@@ -1,3 +1,8 @@
+2011-03-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* include/userenv.h: Add functions and definitions added with Windows
+	2000 and Vista.
+
 2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>
 
 	* Makefile.in: Increment CYGRELEASE to 2.
